--- a/PhotoGrid/PhotoGrid.css
+++ b/PhotoGrid/PhotoGrid.css
@@ -1,12 +1,17 @@
+
 img{
+    height: 300px;
     width:30%;
     margin: calc(10%/6);
+    float:left;
+    overflow: hidden;
 }
 nav{
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
     border-bottom: 2px #f1f1f1;
     width: 30%;
+    /* calc(10%/6) */
     margin-left: calc(10%/6);
-    padding: 20px;
+    padding: 1.2em 0px;
 }
